testdata/baselines/reference/submodule/compiler/argumentsReferenceInConstructor4_Js.errors.txt
/a.js(5,13): error TS8010: Type annotations can only be used in TypeScript files.
/a.js(16,12): error TS8010: Type annotations can only be used in TypeScript files.
/a.js(18,9): error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'arguments'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.


==== /a.js (3 errors) ====
    class A {
    	/**
    	 * Constructor
    	 *
    	 * @param {object} [foo={}]
    	           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    	 */
    	constructor(foo = {}) {
    		const key = "bar";
    
    		/**
    		 * @type object
    		 */
    		this.foo = foo;
    
    		/**
    		 * @type object
    		         ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    		 */
    		const arguments = this.arguments;
    		      ~~~~~~~~~
!!! error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'arguments'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
    
    		/**
    		 * @type object
    		 */
    		this.bar = arguments.bar;
    
    		/**
    		 * @type object
    		 */
    		this.baz = arguments[key];
    
    		/**
    		 * @type object
    		 */
    		this.options = arguments;
    	}
    
    	get arguments() {
    		return { bar: {} };
    	}
    }
    